push changes : bug signUp / align text,change dir

--- a/src/Layout/Footer.css
+++ b/src/Layout/Footer.css
@@ -1,11 +1,10 @@
 .snip1472 {
     position: relative;
-    font-size: 12px;
     color: #e6e6e6;
     width: 30px;
-    margin:2px 8px ;
+    margin:2px 6px ;
     height: 30px;
-    line-height: 40px;
+    line-height: 20px;
     display: inline-block;
     text-align: center;
     -webkit-perspective: 50em;
